--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,6 +1,6 @@
 .hero {
   height: 100vh;
-  background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1950&q=80') center/cover no-repeat;
+  background: url('../assets/Hero.png') center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
