--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(9, 89, 96, 0.4); /* Primary overlay */
+  background: rgba(9, 89, 96, 0.4);
 }
 
 .hero-content {
@@ -28,6 +28,10 @@
   font-size: 3rem;
   margin-bottom: 1rem;
 }
+.hero h3{
+font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
 
 .hero p {
   font-size: 1.2rem;
@@ -35,7 +39,7 @@
 }
 
 .hero-btn {
-  background-color: #3992a0; /* Secondary */
+  background-color: #3992a0; 
   color: white;
   padding: 0.8rem 2rem;
   font-size: 1rem;
@@ -44,5 +48,5 @@
 }
 
 .hero-btn:hover {
-  background-color: #fd355c; /* Pink hover */
+  background-color: #fd355c; 
 }
